2009-07-05  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Proposal for abstract object factory.
	* interfaces/jrlRobotDynamicsObjectConstructor.h: 
	Adding CjrlRobotDunamicsObjectFactory.h .

2009-06-30  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Removed Non abstract template implementation from Abstract Interface.
	* interfaces/CMakeLists.txt: Remove installation of template Non Abstract
	* interfaces/jrlDynamicRobotNA.hpp: Remove.
	* interfaces/jrlHumanoidDynamicRobotNA.hpp: Remove.

2009-06-30  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding footHeight() in the template for Non Abstract implementation.
	* interfaces/jrlHumanoidDynamicRobotNA.hpp: 
	Although deprecated footHeight is still necessary
	to allow real allocation.

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding templates to create Non Abstract Classes from ObjectFactory.
	* The idea behind those templates is to help developper	
	of specific implementation to derive class from object factories.
	The design do not require to know the data structures implementing
	the abstract interface. This help to handle confidential or dirty code. 
	* interfaces/CMakeLists.txt: Adding installation of the templates.
	* interfaces/jrlDynamicRobotNA.hpp: New.
	* interfaces/jrlHumanoidDynamicRobotNA.hpp: New.

2009-06-28  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Change to have homogeneous handling of hands and feet.
	* interfaces/jrlFoot.h: Foot is not derived anymore
	from Joint but encapsulates a Joint as does Hand.
	Please uses associatedAnkle() to get the related
	joint. 

2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Changes in Foot::SoleSize() returns.
	* interfaces/jrlFoot.h: 
	Modified soleSize to not return anything.

2009-06-25  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Fix the deprecated attribute for footHeight().
	* interfaces/jrlHumanoidDynamicRobot.h: 
	Another fix for __attribute__ ((deprecated))
	It seems to be working on g++-4.3.3 .
